# switchboard

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  peer.rs  room.rs  server.rs  signal.rs
static/: index.html
