[package]
name = "switchboard"
version = "0.1.0"
edition = "2021"
description = "minimal WebRTC SFU — routes live media between peers without mixing"
license = "MIT"

[[bin]]
name = "switchboard"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1",   features = ["full"] }
axum        = { version = "0.7", features = ["ws", "macros"] }
str0m       = "0.6"
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid        = { version = "1",   features = ["v4", "fast-rng"] }
dashmap     = "6"
thiserror   = "2"
futures-util = "0.3"
tower-http  = { version = "0.6", features = ["cors", "fs"] }
bytes       = "1"
if-addrs    = "0.13"

[dev-dependencies]
tokio-test = "0.4"
